{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 495,
  "lineage": "cdd8ff1e-f30c-53b2-3566-c60eff22af37",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "9244",
                "uid": "d67f9bf5-c3af-4e1a-a734-dc2b4341cd7f"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "data.aws_eks_cluster.eks",
            "data.aws_eks_cluster_auth.eks",
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.general",
            "module.eks.aws_iam_openid_connect_provider.oidc",
            "module.eks.aws_iam_role.ebs_csi_irsa_role",
            "module.eks.aws_iam_role.eks",
            "module.eks.aws_iam_role.nodes",
            "module.eks.aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.amazon_eks_worker_node_policy",
            "module.eks.aws_iam_role_policy_attachment.ebs_irsa_policy",
            "module.eks.aws_iam_role_policy_attachment.eks",
            "module.eks.time_sleep.wait_for_iam_propagation",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:security-group/sg-0a26404e7f9221424",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a26404e7f9221424",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "myapp-db-yurii-demo-sg",
            "name_prefix": "",
            "owner_id": "804054839611",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "myapp"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:internet-gateway/igw-0641a72cf4e6461e1",
            "id": "igw-0641a72cf4e6461e1",
            "owner_id": "804054839611",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-igw"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-igw"
            },
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0641a72cf4e6461e1",
            "id": "r-rtb-059f6bb4925975b231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-059f6bb4925975b23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:route-table/rtb-0056cb3e895942a69",
            "id": "rtb-0056cb3e895942a69",
            "owner_id": "804054839611",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-private-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:route-table/rtb-059f6bb4925975b23",
            "id": "rtb-059f6bb4925975b23",
            "owner_id": "804054839611",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0641a72cf4e6461e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-public-rt"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eeeed116d020ce8",
            "region": "eu-central-1",
            "route_table_id": "rtb-0056cb3e895942a69",
            "subnet_id": "subnet-0e1b9b51785c95598"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ebf8b6bbde023c0",
            "region": "eu-central-1",
            "route_table_id": "rtb-0056cb3e895942a69",
            "subnet_id": "subnet-0a6ee4ffcb2690764"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d19123e37f17732",
            "region": "eu-central-1",
            "route_table_id": "rtb-0056cb3e895942a69",
            "subnet_id": "subnet-07d854f2bcd81939f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d51a920e54f91f5",
            "region": "eu-central-1",
            "route_table_id": "rtb-059f6bb4925975b23",
            "subnet_id": "subnet-020318413d37e0bf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f94a1ba88d04a17",
            "region": "eu-central-1",
            "route_table_id": "rtb-059f6bb4925975b23",
            "subnet_id": "subnet-03425bcdaf0ef4e8a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026feff949099e684",
            "region": "eu-central-1",
            "route_table_id": "rtb-059f6bb4925975b23",
            "subnet_id": "subnet-08217df1a3da4fef0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:subnet/subnet-0e1b9b51785c95598",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1b9b51785c95598",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804054839611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-private-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-private-subnet-1"
            },
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:subnet/subnet-0a6ee4ffcb2690764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6ee4ffcb2690764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804054839611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-private-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-private-subnet-2"
            },
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:subnet/subnet-07d854f2bcd81939f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d854f2bcd81939f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804054839611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-private-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-private-subnet-3"
            },
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:subnet/subnet-020318413d37e0bf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020318413d37e0bf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804054839611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-public-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-public-subnet-1"
            },
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:subnet/subnet-03425bcdaf0ef4e8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03425bcdaf0ef4e8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804054839611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-public-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-public-subnet-2"
            },
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:subnet/subnet-08217df1a3da4fef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08217df1a3da4fef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804054839611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-public-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-public-subnet-3"
            },
            "vpc_id": "vpc-02c1c622e8b79f606"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:804054839611:vpc/vpc-02c1c622e8b79f606",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07258b54701965caf",
            "default_route_table_id": "rtb-0a9e4cd81e3fe7657",
            "default_security_group_id": "sg-0819aa9ac059d737c",
            "dhcp_options_id": "dopt-0913a5722120a206b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c1c622e8b79f606",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9e4cd81e3fe7657",
            "owner_id": "804054839611",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-7-vpc-yurii-demo-vpc"
            },
            "tags_all": {
              "Name": "lesson-7-vpc-yurii-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}